<resources>
    <string name="app_name">EthoDemoApplication</string>

    <string name="drawer_open">Open nav drawer</string>
    <string name="drawer_close">Close nav drawer</string>

    <string name="welocme">Welcome</string>
    <string name="glad">glad to see you!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="phone">Mobile number</string>
    <string name="bike">Bike</string>

    <string name="update_profile">Update profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
