<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data >
        <variable
            name="profileViewModel"
            type="com.amir.ethodemoapplication.viewmodel.ProfileViewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Profile">

    <TextView
        android:text="@string/name"
        android:id="@+id/tvNameCaption"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edName"
        android:text="@={profileViewModel.name}"
        android:maxLength="30"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_toEndOf="@id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_below="@id/tvNameCaption"
        android:text="@string/email"
        android:id="@+id/tvEmail"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:text="@={profileViewModel.email}"
        android:focusable="false"
        android:maxLength="30"
        android:id="@+id/edEmail"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_below="@id/tvNameCaption"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_toEndOf="@id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <TextView
        android:layout_below="@id/tvEmail"
        android:text="@string/phone"
        android:id="@+id/tvPhone"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edPhone"
        android:text="@={profileViewModel.phone}"
        android:maxLength="10"
        android:singleLine="true"
        android:inputType="number"
        android:layout_below="@id/tvEmail"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_toEndOf="@id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <TextView
        android:layout_below="@id/tvPhone"
        android:text="@string/bike"
        android:id="@+id/tvBike"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edBike"
        android:text="@={profileViewModel.bike}"
        android:singleLine="true"
        android:inputType="text"
        android:layout_below="@id/tvPhone"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_toEndOf="@id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <Button
        android:onClick="@{()-> profileViewModel.onUpdateProfile()}"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/black"
        android:textAllCaps="false"
        android:layout_below="@id/tvBike"
        android:text="@string/update_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp" />

    <include android:visibility="gone"
        android:id="@+id/loader"
        layout="@layout/layout_loader"/>

</RelativeLayout>
</layout>